added ability to create post and only view date and author if the user is a member

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,7 +4,7 @@ block content
   
   div.wrapper
     h1 #{title}
-
+    a(href="/") Home
     form(method='POST' action="/signup")
       div.form-group
         div.firstName
