--- a/views/index.jade
+++ b/views/index.jade
@@ -4,28 +4,23 @@ block content
   
   div.wrapper
     h1 Welcome to the #{title}
-    
-    form(method='POST' action="/login")
-      div.form-group
-        div.username
-          label(for="username") #[strong Username]: 
-          input#username.form-control(type='text', name='username' required)
-        div.password
-          label(for="password") #[strong Password]: 
-          input#password.form-control(type='password', name='password' required)
-        div.button-group
-          button(type="submit" class="button") Login 
-    
-    p Or
-    a(href="/signup") Create an account! 
+    a(href="/login") Login 
+    a(href="/signup") Sign Up 
+    h3 All Posts 
 
-    if failureMessages 
-      each message in failureMessages 
-        p #{message}
-    if errors
-      ul
-        for error in errors
-          li!= error.msg
+    if postList.length 
+        .grid
+            each post in postList 
+                .card   
+                    a(href=post.url) #{post.title}
+                    p #{post.description}
+                    p #{post.date_formatted}
+                    
+    else 
+        #[strong There are no posts. Please create one.]
+
+
+  
 
 
 
