--- a/views/adminForm.jade
+++ b/views/adminForm.jade
@@ -5,7 +5,7 @@ block content
   div.wrapper
     h1 #{title}
     a(href="/user") Back
-    if admin 
+    if isAdmin 
       h3 You are already an Admin! 
       
     else
