--- a/views/user.jade
+++ b/views/user.jade
@@ -4,15 +4,19 @@ block content
   
   div.wrapper
     h1 Welcome #{user.fullName}!
-    a(href="/logout") Logout 
-    
+   
+    .links
+        a(href="/post/create" class="button") Create Post 
+        a(href="/user/membership" class="button") Membership 
+        a(href="/user/admin" class="button") Admin
+        a(href="/logout" class="button") Logout 
     h3 All Posts 
 
     if postList.length 
         .grid
             each post in postList 
                 .card   
-                    a(href=post.url) #{post.title}
+                    h3 #{post.title}
                     p #{post.description}
                     if user.membership
                         p #{post.date_formatted}
@@ -21,11 +25,7 @@ block content
                         a(href=post.url+"/delete") Delete Post
     else 
         #[strong There are no posts. Please create one.]
-    .links
-        a(href="/post/create") Create Post 
-        a(href=user.url+"/getPosts") My Posts 
-        a(href="/user/membership") Membership 
-        a(href="/user/admin") Admin
+    
 
 
 
